# weather-reporter

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/routes/: health.py  weather.py
app/core/: config.py  exceptions.py  logging_config.py
app/db/: mongodb.py
app/db/repositories/: weather_repository.py
app/models/: base.py  weather.py
app/services/: scheduler_service.py  weather_service.py
app/utils/: time_utils.py
